--- a/src/PingApp.Schedule/packages.config
+++ b/src/PingApp.Schedule/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="HtmlAgilityPack" version="1.4.3" />
-  <package id="Lucene" version="2.9.2.2" />
+  <package id="Lucene.Net" version="2.9.4.1" />
   <package id="MySql.Data" version="6.5.4" />
   <package id="Newtonsoft.Json" version="4.5.1" />
   <package id="NLog" version="2.0.0.2000" />
   <package id="NLog.Config" version="2.0.0.2000" />
   <package id="NLog.Schema" version="2.0.0.2000" />
-  <package id="SimpleLucene" version="1.0" />
+  <package id="SharpZipLib" version="0.86.0" />
+  <package id="SimpleLucene" version="1.0.0.1" />
 </packages>
