--- a/src/PingApp.Utility/packages.config
+++ b/src/PingApp.Utility/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Lucene" version="2.9.2.2" />
-  <package id="SimpleLucene" version="1.0" />
+  <package id="Lucene.Net" version="2.9.4.1" />
+  <package id="SharpZipLib" version="0.86.0" />
+  <package id="SimpleLucene" version="1.0.0.1" />
 </packages>
