--- a/src/PingApp.Web/Web.config
+++ b/src/PingApp.Web/Web.config
@@ -31,7 +31,7 @@
     </backingStores>
   </cachingConfiguration>
   <system.web>
-    <httpRuntime requestPathInvalidCharacters=""/>
+    <httpRuntime requestPathInvalidCharacters="" />
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -75,8 +75,7 @@
       <add name="Elmah" path="elmah.axd" verb="POST,GET,HEAD" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
     </handlers>
     <security>
-      <requestFiltering allowDoubleEscaping="true">
-      </requestFiltering>
+      <requestFiltering allowDoubleEscaping="true"></requestFiltering>
     </security>
   </system.webServer>
   <runtime>
@@ -84,6 +83,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
