--- a/src/PingApp.Web/packages.config
+++ b/src/PingApp.Web/packages.config
@@ -11,14 +11,15 @@
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="jQuery" version="1.5.1" />
   <package id="jQuery.Validation" version="1.9" />
-  <package id="Lucene" version="2.9.2.2" />
+  <package id="Lucene.Net" version="2.9.4.1" />
   <package id="Newtonsoft.Json" version="4.5.1" />
   <package id="NHibernate" version="3.1.0.4000" />
   <package id="NHibernate.Castle" version="3.1.0.4000" />
   <package id="NLog" version="2.0.0.2000" />
   <package id="NLog.Config" version="2.0.0.2000" />
   <package id="NLog.Schema" version="2.0.0.2000" />
-  <package id="SimpleLucene" version="1.0" />
+  <package id="SharpZipLib" version="0.86.0" />
+  <package id="SimpleLucene" version="1.0.0.1" />
   <package id="Unity" version="2.1.505.0" />
   <package id="Unity.Interception" version="2.1.505.0" />
 </packages>
