Add interface required for Schedule

--- a/src/PingApp.Repository/PingApp.Repository.csproj
+++ b/src/PingApp.Repository/PingApp.Repository.csproj
@@ -39,7 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAppRepository.cs" />
+    <Compile Include="IAppUpdateRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PingApp.Entity\PingApp.Entity.csproj">
+      <Project>{d1ca9a20-917d-44a6-a8d8-1cfe169fa204}</Project>
+      <Name>PingApp.Entity</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
