--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\PingApp.Entity\packages.config" />
+  <repository path="..\PingApp.Repository.NHibernate\packages.config" />
   <repository path="..\PingApp.Schedule\packages.config" />
   <repository path="..\PingApp.Utility\packages.config" />
   <repository path="..\PingApp.Web\packages.config" />
