--- a/src/PingApp.Repository.NHibernate/PingApp.Repository.NHibernate.csproj
+++ b/src/PingApp.Repository.NHibernate/PingApp.Repository.NHibernate.csproj
@@ -47,6 +47,7 @@
       <HintPath>..\packages\NHibernate.Castle.3.1.0.4000\lib\Net35\NHibernate.ByteCode.Castle.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -56,7 +57,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppRepository.cs" />
+    <Compile Include="AppUpdateRepository.cs" />
+    <Compile Include="Mapping\AppBriefEntityMap.cs" />
+    <Compile Include="Mapping\AppEntityMap.cs" />
+    <Compile Include="Mapping\AppTrackEntityMap.cs" />
+    <Compile Include="Mapping\AppUpdateComponentMap.cs" />
+    <Compile Include="Mapping\AppUpdateEntityMap.cs" />
+    <Compile Include="Mapping\CategoryArrayType.cs" />
+    <Compile Include="Mapping\CategoryType.cs" />
+    <Compile Include="Mapping\DeveloperComponentMap.cs" />
+    <Compile Include="Mapping\SellerComponentMap.cs" />
+    <Compile Include="Mapping\StringArrayType.cs" />
+    <Compile Include="Mapping\UserEntityMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PingApp.Entity\PingApp.Entity.csproj">
