--- a/src/PingApp.Schedule/packages.config
+++ b/src/PingApp.Schedule/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.0.0.4001" />
+  <package id="FluentNHibernate" version="1.2.0.712" />
   <package id="HtmlAgilityPack" version="1.4.3" />
+  <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="Lucene.Net" version="2.9.4.1" />
   <package id="MySql.Data" version="6.5.4" />
   <package id="Newtonsoft.Json" version="4.5.1" />
+  <package id="NHibernate" version="3.1.0.4000" />
+  <package id="NHibernate.Castle" version="3.1.0.4000" />
   <package id="NLog" version="2.0.0.2000" />
   <package id="NLog.Config" version="2.0.0.2000" />
   <package id="NLog.Schema" version="2.0.0.2000" />
