Add repository interface for AppTrack

--- a/src/PingApp.Repository/PingApp.Repository.csproj
+++ b/src/PingApp.Repository/PingApp.Repository.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IAppRepository.cs" />
+    <Compile Include="IAppTrackRepository.cs" />
     <Compile Include="IAppUpdateRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
