--- a/src/PingApp.Repository.NHibernate/PingApp.Repository.NHibernate.csproj
+++ b/src/PingApp.Repository.NHibernate/PingApp.Repository.NHibernate.csproj
@@ -46,6 +46,9 @@
     <Reference Include="NHibernate.ByteCode.Castle">
       <HintPath>..\packages\NHibernate.Castle.3.1.0.4000\lib\Net35\NHibernate.ByteCode.Castle.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.0.0.15\lib\net40\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -57,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppRepository.cs" />
+    <Compile Include="AppTrackRepository.cs" />
     <Compile Include="AppUpdateRepository.cs" />
     <Compile Include="Mapping\AppBriefEntityMap.cs" />
     <Compile Include="Mapping\AppEntityMap.cs" />
@@ -69,6 +73,7 @@
     <Compile Include="Mapping\SellerComponentMap.cs" />
     <Compile Include="Mapping\StringArrayType.cs" />
     <Compile Include="Mapping\UserEntityMap.cs" />
+    <Compile Include="NHibernateRepositoryModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionFactory.cs" />
   </ItemGroup>
