--- a/src/PingApp.Repository.NHibernate/packages.config
+++ b/src/PingApp.Repository.NHibernate/packages.config
@@ -5,4 +5,5 @@
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="NHibernate" version="3.1.0.4000" />
   <package id="NHibernate.Castle" version="3.1.0.4000" />
+  <package id="Ninject" version="3.0.0.15" />
 </packages>
