--- a/src/PingApp.Schedule/packages.config
+++ b/src/PingApp.Schedule/packages.config
@@ -9,6 +9,7 @@
   <package id="Newtonsoft.Json" version="4.5.1" />
   <package id="NHibernate" version="3.1.0.4000" />
   <package id="NHibernate.Castle" version="3.1.0.4000" />
+  <package id="Ninject" version="3.0.0.15" />
   <package id="NLog" version="2.0.0.2000" />
   <package id="NLog.Config" version="2.0.0.2000" />
   <package id="NLog.Schema" version="2.0.0.2000" />
