--- a/src/PingApp.Repository.NHibernate/PingApp.Repository.NHibernate.csproj
+++ b/src/PingApp.Repository.NHibernate/PingApp.Repository.NHibernate.csproj
@@ -62,6 +62,7 @@
     <Compile Include="AppRepository.cs" />
     <Compile Include="AppTrackRepository.cs" />
     <Compile Include="AppUpdateRepository.cs" />
+    <Compile Include="Dependency\SessionStore.cs" />
     <Compile Include="Mapping\AppBriefEntityMap.cs" />
     <Compile Include="Mapping\AppEntityMap.cs" />
     <Compile Include="Mapping\AppTrackEntityMap.cs" />
@@ -73,7 +74,7 @@
     <Compile Include="Mapping\SellerComponentMap.cs" />
     <Compile Include="Mapping\StringArrayType.cs" />
     <Compile Include="Mapping\UserEntityMap.cs" />
-    <Compile Include="NHibernateRepositoryModule.cs" />
+    <Compile Include="Dependency\NHibernateRepositoryModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionFactory.cs" />
   </ItemGroup>
