--- a/src/PingApp.Repository/PingApp.Repository.csproj
+++ b/src/PingApp.Repository/PingApp.Repository.csproj
@@ -44,6 +44,7 @@
     <Compile Include="IAppTrackRepository.cs" />
     <Compile Include="IAppUpdateRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryEmitter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PingApp.Entity\PingApp.Entity.csproj">
