Modulize RssFeedCheck action

--- a/src/PingApp.Schedule/PingApp.Schedule.csproj
+++ b/src/PingApp.Schedule/PingApp.Schedule.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Buffer.cs" />
     <Compile Include="Dependency\InitializeModule.cs" />
+    <Compile Include="Dependency\RssFeedCheckModule.cs" />
     <Compile Include="FullApp.cs" />
     <Compile Include="IStorage.cs" />
     <Compile Include="Program.cs" />
