Migrate update schedule to NHibernate

--- a/src/PingApp.Schedule/PingApp.Schedule.csproj
+++ b/src/PingApp.Schedule/PingApp.Schedule.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Buffer.cs" />
     <Compile Include="Dependency\InitializeModule.cs" />
     <Compile Include="Dependency\RssFeedCheckModule.cs" />
+    <Compile Include="Dependency\UpdateModule.cs" />
     <Compile Include="FullApp.cs" />
     <Compile Include="IStorage.cs" />
     <Compile Include="Program.cs" />
