--- a/src/PingApp.Schedule/PingApp.Schedule.csproj
+++ b/src/PingApp.Schedule/PingApp.Schedule.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Dependency\FullCheckModule.cs" />
     <Compile Include="Dependency\InitializeModule.cs" />
     <Compile Include="Dependency\RssFeedCheckModule.cs" />
+    <Compile Include="Dependency\TestModule.cs" />
     <Compile Include="Dependency\UpdateModule.cs" />
     <Compile Include="FullApp.cs" />
     <Compile Include="IStorage.cs" />
