--- a/src/PingApp.Schedule/PingApp.Schedule.csproj
+++ b/src/PingApp.Schedule/PingApp.Schedule.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Dependency\InitializeModule.cs" />
     <Compile Include="Dependency\RssFeedCheckModule.cs" />
     <Compile Include="Dependency\TestModule.cs" />
+    <Compile Include="Dependency\UpdateAppModule.cs" />
     <Compile Include="Dependency\UpdateModule.cs" />
     <Compile Include="FullApp.cs" />
     <Compile Include="IStorage.cs" />
@@ -132,7 +133,6 @@
     <Compile Include="Task\SearchApiTask.cs" />
     <Compile Include="Task\FullCatalogTask.cs" />
     <Compile Include="Task\IndexTask.cs" />
-    <Compile Include="Task\TestSearchTask.cs" />
     <Compile Include="Task\TestTask.cs" />
     <Compile Include="Task\Top100CheckTask.cs" />
     <Compile Include="Utility.cs" />
