Rename LuceneIndexDirectory to LuceneDirectory, add RetryAttempCount configuration to specify how many times should a task retry when it fails and can be rescued

--- a/src/PingApp.Schedule/App.config
+++ b/src/PingApp.Schedule/App.config
@@ -3,9 +3,11 @@
   <appSettings>
     <add key="Debug" value="True"/>
     <add key="BatchSize" value="500"/>
-    <add key="LuceneIndexDirectory" value="C:\Lucene"/>
+    <add key="RetryAttemptCount" value="5"/>
+    <add key="LuceneIndexDirectory" value="E:\Database\Lucene"/>
+    <add key="LucentDirectory" value="E:\Database\Lucene"/>
   </appSettings>
   <connectionStrings>
-    <add name="PingApp" connectionString="Server=10.211.55.2;User Id=root;Password=861005;Database=PingApp;Charset=utf8mb4;"/>
+    <add name="PingApp" connectionString="Server=localhost;User Id=root;Password=861005;Database=PingApp;Charset=utf8mb4;"/>
   </connectionStrings>
 </configuration>
