--- a/src/PingApp.Schedule/App.config
+++ b/src/PingApp.Schedule/App.config
@@ -6,6 +6,11 @@
     <add key="RetryAttemptCount" value="5"/>
     <add key="LuceneIndexDirectory" value="E:\Database\Lucene"/>
     <add key="LucentDirectory" value="E:\Database\Lucene"/>
+
+    <add key="MailAddress" value="notification@pingapp.net"/>
+    <add key="MailUser" value="PingApp.net"/>
+    <add key="MailServerHost" value="localhost"/>
+    <add key="MailServerPort" value="25"/>
   </appSettings>
   <connectionStrings>
     <add name="PingApp" connectionString="Server=localhost;User Id=root;Password=861005;Database=PingApp;Charset=utf8mb4;"/>
