--- a/src/PingApp.Repository.NHibernate/PingApp.Repository.NHibernate.csproj
+++ b/src/PingApp.Repository.NHibernate/PingApp.Repository.NHibernate.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Dependency\NHibernateRepositoryModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionFactory.cs" />
+    <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PingApp.Entity\PingApp.Entity.csproj">
