Brand new schedule architecture!

--- a/src/PingApp.Schedule/App.config
+++ b/src/PingApp.Schedule/App.config
@@ -4,15 +4,17 @@
     <add key="Debug" value="True"/>
     <add key="BatchSize" value="500"/>
     <add key="RetryAttemptCount" value="5"/>
-    <add key="LuceneIndexDirectory" value="E:\Database\Lucene"/>
     <add key="LucentDirectory" value="E:\Database\Lucene"/>
 
     <add key="MailAddress" value="notification@pingapp.net"/>
     <add key="MailUser" value="PingApp.net"/>
     <add key="MailServerHost" value="localhost"/>
     <add key="MailServerPort" value="25"/>
+
+    <add key="MongoDatabase" value="pingapp" />
   </appSettings>
   <connectionStrings>
     <add name="PingApp" connectionString="Server=localhost;User Id=root;Password=861005;Database=PingApp;Charset=utf8mb4;"/>
+    <add name="Mongo" connectionString="mongodb://localhost:27017"/>
   </connectionStrings>
 </configuration>
