--- a/src/PingApp.Schedule/PingApp.Schedule.csproj
+++ b/src/PingApp.Schedule/PingApp.Schedule.csproj
@@ -109,21 +109,20 @@
   <ItemGroup>
     <Compile Include="Dependency\InitializeModule.cs" />
     <Compile Include="Dependency\SharedModule.cs" />
+    <Compile Include="Dependency\UpdateModule.cs" />
     <Compile Include="Infrastructure\AppParser.cs" />
     <Compile Include="Infrastructure\CatalogParser.cs" />
     <Compile Include="Infrastructure\LuceneIndexer.cs" />
-    <Compile Include="Infrastructure\NewLinedExcecptionLayoutRenderer.cs" />
     <Compile Include="Infrastructure\ProgramSettings.cs" />
     <Compile Include="Infrastructure\UpdateNotifier.cs" />
     <Compile Include="Infrastructure\WebDownload.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Task\InitializeTask.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="Task\InitializeTask.cs" />
     <Compile Include="TaskBase.cs" />
     <Compile Include="ActionType.cs" />
     <Compile Include="Task\TestTask.cs" />
+    <Compile Include="Task\UpdateTask.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
