Add RevokedApp, apps that cannot be found in search api become revoked app and stored in a different place other than normal apps

--- a/src/PingApp.Entity/PingApp.Entity.csproj
+++ b/src/PingApp.Entity/PingApp.Entity.csproj
@@ -52,6 +52,7 @@
     <Compile Include="AppUpdate.cs" />
     <Compile Include="AppUpdateType.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="RevokedApp.cs" />
     <Compile Include="Developer.cs" />
     <Compile Include="DeviceType.cs" />
     <Compile Include="EqualsBuilder.cs" />
