--- a/src/PingApp.Schedule/App.config
+++ b/src/PingApp.Schedule/App.config
@@ -1,26 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="Debug" value="True" />
-    <add key="BatchSize" value="500" />
-    <add key="RetryAttemptCount" value="0" />
-    <add key="LucentDirectory" value="E:\Database\Lucene" />
-    <add key="MailAddress" value="notification@pingapp.net" />
-    <add key="MailUser" value="PingApp.net" />
-    <add key="MailServerHost" value="localhost" />
-    <add key="MailServerPort" value="25" />
-    <add key="MongoDatabase" value="pingapp" />
+    <add key="Debug" value="True"/>
+    <add key="BatchSize" value="500"/>
+    <add key="RetryAttemptCount" value="0"/>
+    <add key="LucentDirectory" value="E:\Database\Lucene"/>
+    <add key="MailAddress" value="notification@pingapp.net"/>
+    <add key="MailUser" value="PingApp.net"/>
+    <add key="MailServerHost" value="localhost"/>
+    <add key="MailServerPort" value="25"/>
+    <add key="MongoDatabase" value="pingapp"/>
   </appSettings>
   <connectionStrings>
-    <add name="PingApp" connectionString="Server=localhost;User Id=root;Password=861005;Database=PingApp;Charset=utf8mb4;" />
-    <add name="Mongo" connectionString="mongodb://localhost:27017" />
+    <add name="PingApp" connectionString="Server=localhost;User Id=root;Password=861005;Database=PingApp;Charset=utf8mb4;"/>
+    <add name="Mongo" connectionString="mongodb://localhost:27017"/>
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
