Move proxy settings to configuration file

--- a/src/PingApp.Schedule/App.config
+++ b/src/PingApp.Schedule/App.config
@@ -6,6 +6,7 @@
     <add key="RetryAttemptCount" value="0"/>
     <add key="ParallelDegree" value="4"/>
     <add key="LucentDirectory" value="E:\Database\Lucene"/>
+    <add key="ProxyAddress" value="127.0.0.1:8888"/>
     <add key="MailAddress" value="notification@pingapp.net"/>
     <add key="MailUser" value="PingApp.net"/>
     <add key="MailServerHost" value="localhost"/>
