--- a/src/PingApp.Web/packages.config
+++ b/src/PingApp.Web/packages.config
@@ -1,25 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.0.0.4001" />
-  <package id="CommonServiceLocator" version="1.0" />
   <package id="elmah" version="1.2.0.1" />
   <package id="elmah.corelibrary" version="1.2.1" />
   <package id="elmah.xml" version="1.2" />
-  <package id="EnterpriseLibrary.Caching" version="5.0.505.0" />
-  <package id="EnterpriseLibrary.Common" version="5.0.505.0" />
-  <package id="FluentNHibernate" version="1.2.0.712" />
-  <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="jQuery" version="1.7.1" />
   <package id="jQuery.Validation" version="1.9" />
   <package id="Lucene.Net" version="2.9.4.1" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Newtonsoft.Json" version="4.5.1" />
-  <package id="NHibernate" version="3.1.0.4000" />
-  <package id="NHibernate.Castle" version="3.1.0.4000" />
+  <package id="Ninject" version="3.0.0.15" />
+  <package id="Ninject.MVC3" version="3.0.0.6" />
+  <package id="Ninject.Web.Common" version="3.0.0.7" />
   <package id="NLog" version="2.0.0.2000" />
   <package id="NLog.Config" version="2.0.0.2000" />
   <package id="NLog.Schema" version="2.0.0.2000" />
   <package id="SharpZipLib" version="0.86.0" />
   <package id="SimpleLucene" version="1.0.0.1" />
-  <package id="Unity" version="2.1.505.0" />
-  <package id="Unity.Interception" version="2.1.505.0" />
+  <package id="WebActivator" version="1.5" />
 </packages>
