--- a/src/PingApp.Web/Views/Web.config
+++ b/src/PingApp.Web/Views/Web.config
@@ -16,8 +16,9 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="PingApp.Web.Infrastructures" />
-        <add namespace="PingApp.Web.Models" />
         <add namespace="PingApp.Entity" />
+        <add namespace="PingApp.Repository.Quries" />
+        <add namespace="PingApp.Web.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
