--- a/src/PingApp.Web/Web.config
+++ b/src/PingApp.Web/Web.config
@@ -14,13 +14,14 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="PingApp" connectionString="Server=10.211.55.2;User Id=root;Password=861005;Database=PingApp;" />
+    <add name="Mongo" connectionString="mongodb://localhost:27017"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="LuceneIndexDirectory" value="C:\Lucene" />
+    <add key="MongoDatabase" value="pingapp"/>
+    <add key="LucentDirectory" value="C:\Lucene" />
   </appSettings>
   <cachingConfiguration defaultCacheManager="Data Cache Manager">
     <cacheManagers>
