--- a/src/PingApp.Web/PingApp.Web.csproj
+++ b/src/PingApp.Web/PingApp.Web.csproj
@@ -151,7 +151,9 @@
     <Content Include="Content\Images\Guide\usage-8.png" />
     <Content Include="Content\Images\hot-decorator.png" />
     <Content Include="Content\Images\app-store.png" />
+    <Content Include="Content\Images\logo-app.png" />
     <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\Images\splash-radar.png" />
     <Content Include="Content\layout.css">
       <DependentUpon>layout.less</DependentUpon>
     </Content>
