Move smtp server configurations to system.net section

--- a/src/PingApp.Schedule/App.config
+++ b/src/PingApp.Schedule/App.config
@@ -9,14 +9,19 @@
     <add key="ProxyAddress" value="127.0.0.1:8888"/>
     <add key="MailAddress" value="notification@pingapp.net"/>
     <add key="MailUser" value="PingApp.net"/>
-    <add key="MailServerHost" value="localhost"/>
-    <add key="MailServerPort" value="25"/>
     <add key="MongoDatabase" value="pingapp"/>
   </appSettings>
   <connectionStrings>
     <add name="PingApp" connectionString="Server=localhost;User Id=root;Password=861005;Database=PingApp;Charset=utf8mb4;"/>
     <add name="Mongo" connectionString="mongodb://localhost:27017"/>
   </connectionStrings>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network">
+        <network host="localhost" port="25" defaultCredentials="true"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -25,4 +30,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+</configuration>
