--- a/src/PingApp.Infrastructure/PingApp.Infrastructure.csproj
+++ b/src/PingApp.Infrastructure/PingApp.Infrastructure.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dependency\InfrastructureModule.cs" />
     <Compile Include="IAppIndexer.cs" />
     <Compile Include="ICatalogParser.cs" />
     <Compile Include="IUpdateNotifier.cs" />
